# srsinst.sr542

./: LICENSE.txt  pyproject.toml  readme.md
srsinst/sr542/: __init__.py  __main__.py  dutyFactorControl.taskconfig  sr542 with sr860.taskconfig  sr542.taskconfig
srsinst/sr542/instruments/: components.py  get_instruments.py  keys.py  sr542.py
srsinst/sr542/tasks/: dutyfactorcontrol.py
