
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "srsinst.sr542"
authors = [
    {name = "Chulhoon Kim"},
    {name = "Andrew Berger"}
]
description = "Instrument driver package for precision optical chopper SR542 from Stanford Research Systems"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["SR542", "SRS", "Stanford Research Systems", "optical chopper"]
license = {text = "MIT license"}
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Topic :: Scientific/Engineering"
]
dependencies = [
    "numpy", "srsgui>=0.1.21",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "srsinst.sr542.__version__"}

[project.optional-dependencies]
full = ['matplotlib>=3.6.2', 'pyside6']

[project.scripts]
sr542 = "srsinst.sr542.__main__:main"
